@@ -8,9 +8,17 @@
   pre > code {
     color: inherit;
   }
-  pre ins, pre del {
+  ins, del {
     display: block;
     font-size: inherit;
+  }
+  .diff-props ins, .diff-props del {
+    border-style: none;
+    text-decoration: none;
+  }
+  .diff-props code {
+    background: transparent;
+    color: inherit;
   }
   span.line {
     display: block;
@@ -95,4 +103,8 @@ dd.tag + dd.tag {
   margin-left: 0;
   padding: 0;
 }
+
+/*
+  License: Public Domain.
+*/
 
